update jdt.core to I20210804-1800 (around skipped M2)
incl.
- a few version updates
- refresh of otdt.AbstractJavaModelTests
- fup from migration StringBuffer -> StringBuilder
- fup from updated JavaElement.getParent() et al
- adjust AstGenerator.caseStatement(): null -> new Expression[0]

Change-Id: If281404cced772094319e69d89e4e5a59dee37fe